fixed popup referrer widget height on IE

--- a/assets/css/widget.less
+++ b/assets/css/widget.less
@@ -203,7 +203,7 @@ body .squatch-container {
 }
 
 .squatch-container-popup {
-  height: 1047px;
+  height: 1047px!important;
 }
 
 .squatch-container-popup #squatch-panel {
